--- a/src/Services/Identity/Folks.IdentityService.Api/Pages/Redirect/Index.cshtml.css
+++ b/src/Services/Identity/Folks.IdentityService.Api/Pages/Redirect/Index.cshtml.css
@@ -1,6 +1,7 @@
-﻿@media (max-width: 574px) {
-    .card {
-        height: 100vh;
-        border-radius: 0;
-    }
+@media (max-width: 574px) {
+  .card {
+    height: 100%;
+    overflow: scroll;
+    border-radius: 0;
+  }
 }
